--- a/css/main.css
+++ b/css/main.css
@@ -791,10 +791,6 @@ nav#menu #menu-nav li a:hover {
 	margin-bottom: 25px;
 }
 
-.profile-education {
-  margin-left: 30px;
-}
-
 .image-wrap {
 	position: relative;
 	overflow: hidden;
@@ -866,12 +862,6 @@ nav#menu #menu-nav li a:hover {
 	filter: alpha(opacity=100);
 }
 
-.school-icons {
-  width: 40px;
-  height: 40px;
-  margin-top: 10px;
-}
-
 .social-icons {
 	margin: 0;
 	padding: 0;
@@ -916,7 +906,7 @@ nav#menu #menu-nav li a:hover {
     font-size: 24px;
     font-weight: 300;
     margin-bottom: 30px;
-	  line-height: 1em;
+	line-height: 1em;
     text-transform: uppercase;
 }
 
@@ -951,7 +941,7 @@ nav#menu #menu-nav li a:hover {
 	-moz-box-shadow: none;
 	box-shadow: none;
 
-	bacund: #26292E;
+	background: #26292E;
     color: #FFFFFF;
     font-size: 16px;
     height: auto;
