--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ body{
 
 
 a{
-	color:#DE5E60;
+	color:green;
 	text-decoration: none;
 	cursor: pointer;
 
@@ -104,7 +104,7 @@ hr {
 }
 
 .color-text {
-    color: #DE5E60;
+    color: green;
 }
 
 .through{
@@ -380,7 +380,7 @@ h3.spec {
 
 #home-slider #nextslide:hover,
 #home-slider #prevslide:hover {
-	background-color:#DE5E60;
+	background-color:green;
 }
 
 #home-slider #nextslide i,
@@ -438,7 +438,7 @@ h3.spec {
 
 #home-slider ul#slide-list li.current-slide a,
 #home-slider ul#slide-list li.current-slide a:hover {
-	background-color:#DE5E60;
+	background-color:green;
 }
 
 #home-slider #nextsection {
@@ -456,7 +456,7 @@ h3.spec {
 }
 
 #home-slider #nextsection:hover {
-	background-color:#DE5E60;
+	background-color:green;
 }
 
 #home-slider #nextsection i {
@@ -524,7 +524,7 @@ header #logo a {
 }
 
 header #logo a:hover {
-	color: #DE5E60;
+	color: green;
 	opacity: 0.65;
 	filter: alpha(opacity=65);
 }
@@ -560,7 +560,7 @@ nav#menu #menu-nav li a {
 
 nav#menu #menu-nav li.current a,
 nav#menu #menu-nav li a:hover {
-	color: #DE5E60;
+	color: green;
 }
 
 
@@ -699,7 +699,7 @@ nav#menu #menu-nav li a:hover {
 }
 
 .work-nav #filters li a.selected {
-	color: #DE5E60;
+	color: green;
 }
 
 #thumbs {
@@ -759,7 +759,7 @@ nav#menu #menu-nav li a:hover {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: #DE5E60;
+	background: green;
 
 	opacity: 0.80;
 	filter: alpha(opacity=80);
@@ -843,7 +843,7 @@ nav#menu #menu-nav li a:hover {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: #DE5E60;
+	background: green;
 
 	opacity: 0.80;
 	filter: alpha(opacity=80);
@@ -996,7 +996,7 @@ nav#menu #menu-nav li a:hover {
 }
 
 #contact-form .submit:hover {
-    background: #DE5E60;
+    background: green;
     color: #FFFFFF;
 }
 
@@ -1117,7 +1117,7 @@ nav#menu #menu-nav li a:hover {
 
 #social ul li:hover a,
 #social ul li.active a {
-	background-color: #DE5E60;
+	background-color: green;
 
 	-webkit-transform: rotateY(0deg);
 	   -moz-transform: rotateY(0deg);
@@ -1182,7 +1182,7 @@ footer .credits {
 }
 
 #back-to-top:hover {
-	background-color:#DE5E60;
+	background-color:green;
 }
 
 #back-to-top i {
@@ -1258,7 +1258,7 @@ footer .credits {
 	margin: -50px 0 0 -50px;
 	width: 100px;
 	height: 100px;
-	background: #DE5E60;
+	background: green;
 	-webkit-border-radius: 999px;
 	-moz-border-radius: 999px;
 	border-radius: 999px;
