--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: Brushed
-Theme URI: http://www.themes.alessioatzeni.com/html/brushed/
+Theme URI: https://www.themes.alessioatzeni.com/html/brushed/
 Author: Alessio Atzeni
-Author URI: http://www.alessioatzeni.com
+Author URI: https://www.alessioatzeni.com
 Description: Personal Website and Portfolio of Alessio Atzeni
 Version: 1.0
 */
