--- a/css/main.css
+++ b/css/main.css
@@ -334,7 +334,7 @@ h3.spec {
 }
 
 #home-slider .slide-content-sub {
-	font-size: 22px;
+	font-size: 3vw;
   color: #FFFFFF;
   letter-spacing: 1px;
   line-height: 75px;
