hopefully my final commit

--- a/css/main.css
+++ b/css/main.css
@@ -327,9 +327,9 @@ h3.spec {
 }
 
 #home-slider .slide-content {
-	font-size: 60px;
+	font-size: 4vw;
 	color: #FFFFFF;
-	letter-spacing: -3px;
+/*	letter-spacing: -3px;*/
 	text-transform: uppercase;
 }
 
