added responsiveness to title page and about me

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,202 +4,224 @@
 	}
 
 	#mobile-nav {
-    	display: block;
-		float: right;
-	}
+   display: block;
+   float: right;
+ }
 
-	#menu-nav-mobile {
-		margin: 0;
-	}
+ #menu-nav-mobile {
+  margin: 0;
+}
 
-	header .sticky-nav #mobile-nav,
-	header .sticky-nav.stuck #mobile-nav {
-		margin-right: 20px;
-	}
+#biography {
+  font-size:16px;
+}
 
-	#social-area #social ul li {
-		margin-left: 15px;
-	}
+#home-slider .slide-content-sub {
+  font-size: 16px;
+  color: #FFFFFF;
+  letter-spacing: 1px;
+  line-height: 75px;
+}
 
-	#social-area #social ul li a {
-		width: 50px;
-		height: 50px;
-	}
+header .sticky-nav #mobile-nav,
+header .sticky-nav.stuck #mobile-nav {
+  margin-right: 20px;
+}
 
-	#social-area #social ul li a span {
-		font-size: 24px;
-		line-height: 50px;
-	}
+#social-area #social ul li {
+  margin-left: 15px;
+}
 
-	#twitter-feed {
-		padding-top: 110px;
-		padding-bottom: 110px;
-	}
+#social-area #social ul li a {
+  width: 50px;
+  height: 50px;
+}
 
-	.info-block a.button {
-    	margin-top: 20px;
-    	position: inherit;
-	}
+#social-area #social ul li a span {
+  font-size: 24px;
+  line-height: 50px;
+}
 
-	.info-text {
-		padding-right: 0;
-	}
+#twitter-feed {
+  padding-top: 110px;
+  padding-bottom: 110px;
+}
+
+.info-block a.button {
+ margin-top: 20px;
+ position: inherit;
+}
+
+.info-text {
+  padding-right: 0;
+}
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
-	#back-to-top {
-		display: none !important;
-	}
+  #home-slider .slide-content-sub {
+    font-size: 28px;
+    color: #FFFFFF;
+    letter-spacing: 1px;
+    line-height: 75px;
+  }
 
-	#home-slider {
-		margin-left: -20px;
-		margin-right: -20px;
-	}
+  #biography {
+    font-size:16px;
+  }
 
-	header .sticky-nav {
-		position: relative;
-	}
+  #back-to-top {
+    display: none !important;
+  }
 
-	header .sticky-nav,
-	#navigation-mobile,
-	.page,
-	.page-alternate,
-	#twitter-feed,
-	footer {
-		margin-left: -20px;
-		margin-right: -20px;
-		padding-left: 20px;
-		padding-right: 20px;
-	}
+  #home-slider {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
 
-	header .sticky-nav #logo {
-		margin-left: 0;
-	}
+  header .sticky-nav {
+    position: relative;
+  }
 
-	header .sticky-nav.stuck #logo {
-		margin-left: 20px;
-	}
+  header .sticky-nav,
+  #navigation-mobile,
+  .page,
+  .page-alternate,
+  #twitter-feed,
+  footer {
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 
-	header .sticky-nav #menu {
-		margin-right: 0;
-	}
+  header .sticky-nav #logo {
+    margin-left: 0;
+  }
 
-	header .sticky-nav.stuck #menu {
-		margin-right: 20px;
-	}
+  header .sticky-nav.stuck #logo {
+    margin-left: 20px;
+  }
 
-	#menu {
-		display: none;
-	}
+  header .sticky-nav #menu {
+    margin-right: 0;
+  }
 
-	#mobile-nav {
-    	display: block;
-		float: right;
-	}
+  header .sticky-nav.stuck #menu {
+    margin-right: 20px;
+  }
 
-	#menu-nav-mobile {
-		margin-left: -20px;
-		margin-right: -20px;
-		margin-bottom: 0;
-	}
+  #menu {
+    display: none;
+  }
 
-	header .sticky-nav.stuck #mobile-nav {
-		margin-right: 20px;
-	}
+  #mobile-nav {
+   display: block;
+   float: right;
+ }
 
-	.work-nav {
-		margin-bottom: 30px;
-	}
+ #menu-nav-mobile {
+  margin-left: -20px;
+  margin-right: -20px;
+  margin-bottom: 0;
+}
 
-	.type-work {
-		background: url(../img/filter-icon.png) no-repeat;
-		width: 16px;
-		height: 16px;
-		display: inline-block;
-		text-indent: -9999px;
-		margin-bottom: 0;
-		position: relative;
-		line-height: 10px;
-	}
+header .sticky-nav.stuck #mobile-nav {
+  margin-right: 20px;
+}
 
-	.work-nav #filters,
-	.work-nav #filters li {
-		display: inline-block;
-	}
+.work-nav {
+  margin-bottom: 30px;
+}
 
-	.work-nav #filters li {
-		margin:0 10px 0 0;
-	}
+.type-work {
+  background: url(../img/filter-icon.png) no-repeat;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  text-indent: -9999px;
+  margin-bottom: 0;
+  position: relative;
+  line-height: 10px;
+}
 
-	.work-nav #filters li a {
-		font-size: 13px;
-		text-transform: uppercase;
-	}
+.work-nav #filters,
+.work-nav #filters li {
+  display: inline-block;
+}
 
-	#about .profile {
-		margin-bottom: 30px;
-	}
+.work-nav #filters li {
+  margin:0 10px 0 0;
+}
 
-	#about .profile:last-child {
-		margin-bottom: 0;
-	}
+.work-nav #filters li a {
+  font-size: 13px;
+  text-transform: uppercase;
+}
 
-	#response {
-		margin-bottom: 30px;
-	}
+#about .profile {
+  margin-bottom: 30px;
+}
 
-	.contact-details {
-		border-top: 1px dashed #3C3F45;
-		padding-top: 30px;
-		text-align: center;
-	}
+#about .profile:last-child {
+  margin-bottom: 0;
+}
 
-	#contact-form .submit {
-		width: 100%;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-	}
+#response {
+  margin-bottom: 30px;
+}
 
-	#social-area #social ul li:first-child,
-	#social-area #social ul li {
-		margin: 15px;
-	}
+.contact-details {
+  border-top: 1px dashed #3C3F45;
+  padding-top: 30px;
+  text-align: center;
+}
 
-	#social-area #social ul li a {
-		width: 50px;
-		height: 50px;
-	}
+#contact-form .submit {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
-	#social-area #social ul li a span {
-		font-size: 24px;
-		line-height: 50px;
-	}
+#social-area #social ul li:first-child,
+#social-area #social ul li {
+  margin: 15px;
+}
 
-	#twitter-feed {
-		padding-top: 90px;
-		padding-bottom: 100px;
-	}
+#social-area #social ul li a {
+  width: 50px;
+  height: 50px;
+}
 
-	#ticker .tweet_list li {
-		font-size: 16px;
-		line-height: 24px;
-	}
+#social-area #social ul li a span {
+  font-size: 24px;
+  line-height: 50px;
+}
 
-	#ticker .tweet_list .tweet_time a {
-		font-size: 13px;
-		margin-left: 5px;
-	}
+#twitter-feed {
+  padding-top: 90px;
+  padding-bottom: 100px;
+}
 
-	.info-block a.button {
-    	margin-top: 20px;
-    	position: inherit;
-		display: block;
-	}
+#ticker .tweet_list li {
+  font-size: 16px;
+  line-height: 24px;
+}
 
-	.info-text {
-		padding-right: 0;
-	}
+#ticker .tweet_list .tweet_time a {
+  font-size: 13px;
+  margin-left: 5px;
+}
+
+.info-block a.button {
+ margin-top: 20px;
+ position: inherit;
+ display: block;
+}
+
+.info-text {
+  padding-right: 0;
+}
 }
 
 @media (max-width: 480px) {
@@ -253,122 +275,122 @@
 	}
 
 	#mobile-nav {
-    	display: block;
-		float: right;
-	}
+   display: block;
+   float: right;
+ }
 
-	#menu-nav-mobile {
-		margin-left: -20px;
-		margin-right: -20px;
-		margin-bottom: 0;
-	}
+ #menu-nav-mobile {
+  margin-left: -20px;
+  margin-right: -20px;
+  margin-bottom: 0;
+}
 
-	#navigation-mobile li a {
-		font-size: 14px;
-		padding: 12px 0;
-	}
+#navigation-mobile li a {
+  font-size: 14px;
+  padding: 12px 0;
+}
 
-	header .sticky-nav.stuck #mobile-nav {
-		margin-right: 20px;
-	}
+header .sticky-nav.stuck #mobile-nav {
+  margin-right: 20px;
+}
 
-	.work-nav {
-		margin-bottom: 30px;
-	}
+.work-nav {
+  margin-bottom: 30px;
+}
 
-	.type-work {
-		background: url(../img/filter-icon.png) no-repeat;
-		width: 16px;
-		height: 16px;
-		display: inline-block;
-		text-indent: -9999px;
-		margin-bottom: 0;
-		position: relative;
-		line-height: 10px;
-	}
+.type-work {
+  background: url(../img/filter-icon.png) no-repeat;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  text-indent: -9999px;
+  margin-bottom: 0;
+  position: relative;
+  line-height: 10px;
+}
 
-	.work-nav #filters li:first-child {
-		margin-left: 0;
-	}
+.work-nav #filters li:first-child {
+  margin-left: 0;
+}
 
-	.work-nav #filters,
-	.work-nav #filters li {
-		display: inline-block;
-	}
+.work-nav #filters,
+.work-nav #filters li {
+  display: inline-block;
+}
 
-	.work-nav #filters li {
-		margin:0 10px 0 0;
-	}
+.work-nav #filters li {
+  margin:0 10px 0 0;
+}
 
-	.work-nav #filters li a {
-		font-size: 13px;
-		text-transform: uppercase;
-	}
+.work-nav #filters li a {
+  font-size: 13px;
+  text-transform: uppercase;
+}
 
-	#about .profile {
-		margin-bottom: 30px;
-	}
+#about .profile {
+  margin-bottom: 30px;
+}
 
-	#about .profile:last-child {
-		margin-bottom: 0;
-	}
+#about .profile:last-child {
+  margin-bottom: 0;
+}
 
-	#response {
-		margin-bottom: 30px;
-	}
+#response {
+  margin-bottom: 30px;
+}
 
-	.contact-details {
-		border-top: 1px dashed #3C3F45;
-		padding-top: 30px;
-		text-align: center;
-	}
+.contact-details {
+  border-top: 1px dashed #3C3F45;
+  padding-top: 30px;
+  text-align: center;
+}
 
-	#contact-form .submit {
-		width: 100%;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-	}
+#contact-form .submit {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
-	#social-area #social ul li:first-child,
-	#social-area #social ul li {
-		margin: 15px;
-	}
+#social-area #social ul li:first-child,
+#social-area #social ul li {
+  margin: 15px;
+}
 
-	#social-area #social ul li a {
-		width: 50px;
-		height: 50px;
-	}
+#social-area #social ul li a {
+  width: 50px;
+  height: 50px;
+}
 
-	#social-area #social ul li a span {
-		font-size: 24px;
-		line-height: 50px;
-	}
+#social-area #social ul li a span {
+  font-size: 24px;
+  line-height: 50px;
+}
 
-	#twitter-feed {
-		padding-top: 90px;
-		padding-bottom: 100px;
-	}
+#twitter-feed {
+  padding-top: 90px;
+  padding-bottom: 100px;
+}
 
-	#ticker .tweet_list li {
-		font-size: 14px;
-		line-height: 22px;
-	}
+#ticker .tweet_list li {
+  font-size: 14px;
+  line-height: 22px;
+}
 
-	#ticker .tweet_list .tweet_time a {
-		font-size: 12px;
-		margin-left: 3px;
-	}
+#ticker .tweet_list .tweet_time a {
+  font-size: 12px;
+  margin-left: 3px;
+}
 
-	.info-block a.button {
-    	margin-top: 20px;
-    	position: inherit;
-		display: block;
-	}
+.info-block a.button {
+ margin-top: 20px;
+ position: inherit;
+ display: block;
+}
 
-	.info-text {
-		padding-right: 0;
-	}
+.info-text {
+  padding-right: 0;
+}
 }
 
 @media (max-width: 320px) {
@@ -390,21 +412,21 @@
 /* Retina Display */
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2),
- 	only screen and (-moz-min-device-pixel-ratio: 2),
-  	only screen and (-o-min-device-pixel-ratio: 2/1),
-  	only screen and (min-device-pixel-ratio: 2),
-  	only screen and (min-resolution: 2dppx) {
+only screen and (-moz-min-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 2/1),
+only screen and (min-device-pixel-ratio: 2),
+only screen and (min-resolution: 2dppx) {
 
-		header #logo a {
-			background-size: 96px 30px;
-		}
+  header #logo a {
+   background-size: 96px 30px;
+ }
 
-		.menu-nav {
-			background-image: url(../img/menu-mobile_@2x.png);
-			background-size: 16px 32px;
-		}
+ .menu-nav {
+   background-image: url(../img/menu-mobile_@2x.png);
+   background-size: 16px 32px;
+ }
 
-		.type-work {
-			background-size: 16px 16px;
-		}
-	}
+ .type-work {
+   background-size: 16px 16px;
+ }
+}
